--- a/style.css
+++ b/style.css
@@ -322,12 +322,16 @@ footer {
         font-size: 1.5rem;
     }
 
-    .portfolio-item img, 
+    
     .portfolio-image {
-        height: 250px; /* Reduz a altura das imagens */
+        height: 200px; /* Reduz a altura das imagens */
     }
     .logo {
         height: 100px; /* Reduz a altura da logo */
+    }
+
+    .portfolio-image-1 {
+        height: 200px; /* Reduz a altura das imagens */
     }
 }
 
@@ -344,13 +348,16 @@ footer {
     .highlight-item {
         padding: 20px 10px;
     }
-    .portfolio-item img, 
     .portfolio-image {
         height: 200px; /* Reduz ainda mais a altura das imagens */
     }
 
     .logo {
         height: 80px; /* Reduz ainda mais a altura da logo */
+    }
+
+    .portfolio-image-1 {
+        height: 200px; /* Reduz a altura das imagens */
     }
 }
 
