--- a/style.css
+++ b/style.css
@@ -361,6 +361,33 @@ footer {
     }
 }
 
+@media (max-width: 320px) {
+    nav ul {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    nav ul li {
+        margin: 5px 10px;
+    }
+    
+    .highlight-item {
+        padding: 20px 10px;
+    }
+    .portfolio-image {
+        height: 100px; /* Reduz ainda mais a altura das imagens */
+    }
+
+    .logo {
+        height: 80px; /* Reduz ainda mais a altura da logo */
+    }
+
+    .portfolio-image-1 {
+        height: 200px; /* Reduz a altura das imagens */
+    }
+}
+
+
 .contact-form {
     max-width: 600px;
     margin: 0 auto;
