--- a/style.css
+++ b/style.css
@@ -450,3 +450,28 @@ footer {
 .contact-form button:hover {
     background-color: var(--secondary-green);
 }
+
+
+.social-button {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+}
+
+.social-button-footer {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    margin-top: 10px;
+}
